# EveryDayStuff

./: CMakeLists.txt  My-New-Year-Starting-Point.txt  README.md  full_light_detector.c
SoulDinky-Distros/: LICENSE  README.md
SoulDinky-Distros/arch/: Base-Install__Not-Encrypted.txt  autoapp.sh  dualboot.txt  postinstall.txt  runconfigs.sh  vimrc  wifi.txt
